aks/k8s/sapp1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sapp1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sapp1
  template:
    metadata:
      labels:
        app: sapp1
    spec:
      containers:
        - name: sapp1
          image: acrcloudk8slabdevause01.azurecr.io/sapp1:v1
          ports:
            - containerPort: 80
