aks/k8s/sapp1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sapp1-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: sapp1.aks.darrencloudlab.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sapp1-service
                port:
                  number: 80
